--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- Font Awesome CDN -->
     <link rel="stylesheet" href="style.css">
 
-    <title>Amazon Clone</title>
+    <title>Amazon </title>
 </head>
 <style>
     #addtocart{
